feat: add decommission warning message

--- a/templates/header.twig
+++ b/templates/header.twig
@@ -16,6 +16,7 @@
   <link rel="stylesheet" type="text/css" href="{{ base_dir }}js/vendor/codemirror/addon/hint/show-hint.css?{{ version }}">
   <link rel="stylesheet" type="text/css" href="{{ base_dir }}js/vendor/codemirror/addon/lint/lint.css?{{ version }}">
   <link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/theme{{ text_dir == 'rtl' ? '.rtl' }}.css?{{ version }}">
+  <link rel="stylesheet" type="text/css" href="{{ theme_path }}/../scalingo/main.css">
   <title>{{ title }}</title>
   {{ scripts|raw }}
   <noscript><style>html{display:block}</style></noscript>
