--- a/templates/login/form.twig
+++ b/templates/login/form.twig
@@ -44,6 +44,11 @@
   </div>
 {% endif %}
 
+<div class="warning">
+    <p>This phpMyAdmin instance provided by Scalingo will be decommissioned and put offline on the 1st of April 2024 (2024-04-01).</p>
+    <p>If you are using it, please have a look at [other access methods for your MySQL database](https://doc.scalingo.com/platform/databases/access).</p>
+</div>
+
 <form method="post" id="login_form" action="index.php?route=/" name="login_form" class="
   {{- not is_session_expired ? 'disableAjax hide ' }}js-show"{{ not has_autocomplete ? ' autocomplete="off"' }}>
   {# Do not generate a "server" hidden field as we want the "server" drop-down to have priority. #}
