fix: fix warning message link

--- a/templates/login/form.twig
+++ b/templates/login/form.twig
@@ -46,7 +46,7 @@
 
 <div class="warning">
     <p>This phpMyAdmin instance provided by Scalingo will be decommissioned and put offline on the 1st of April 2024 (2024-04-01).</p>
-    <p>If you are using it, please have a look at [other access methods for your MySQL database](https://doc.scalingo.com/platform/databases/access).</p>
+    <p>If you are using it, please have a look at <a href="https://doc.scalingo.com/platform/databases/access">other access methods for your MySQL database</a>.</p>
 </div>
 
 <form method="post" id="login_form" action="index.php?route=/" name="login_form" class="
